<resources>
    <string name="app_name">CoffeeNow</string>
    <string name="title_activity_coffee_menu">CoffeeMenuActivity</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="no_favorites_text">No Favorites</string>
    <string name="title_activity_shopping_cart">ShoppingCart</string>
    <string name="cart_order_button_text">Make Order</string>
    <string name="email_field">Email:</string>
    <string name="order_title">YOUR ORDERS:</string>
    <string name="invalid_email">Invalid Email:</string>
    <string name="gps_title">GPS is settings</string>
    <string name="gps_body">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_positive">Settings</string>
    <string name="gps_negative">Cancel</string>
    <string name="Successfull_order">Order successful</string>
    <string name="coffee_icon">Coffee icon</string>
    <string name="coffee_image">coffee image</string>
    <string name="tab_list">List</string>
    <string name="tab_map">Map</string>
    <string name="tab_menu">Menu</string>
    <string name="tab_favorites">Favorites</string>
    <string name="content_provider_name">name</string>

</resources>
