<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/coffee_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/coffee_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/coffee_name"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/coffee_image"
        android:src="@drawable/americano" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coffee_img"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorites" />

        <Button
            android:id="@+id/cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart" />

    </LinearLayout>


</RelativeLayout>